# searchmonkey

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  install_launcher.sh  intltool-update.patch  release  searchmonkey-0-8-2-gtk3.glade  searchmonkey-0-8-2.glade  searchmonkey.desktop
DEBIAN/: control
autom4te.cache/: output.0  requests  traces.0
dist-ella/: ella.desktop  toto_a_la_campagne.txt  toto_a_la_montagne.txt  toto_a_la_plage.txt  tutoriel.odt
dist-ella/file-manager/actions/: searchmonkey-action.desktop
pixmaps/: Makefile  Makefile.am  Makefile.in  logo-5.odg  logo-5.wmf
po/: Makefile  Makefile.in  en_GB.gmo  en_GB.mo  en_GB.po  en_US.gmo  en_US.mo  en_US.po  fr.gmo  fr.mo  fr.po  fr_FR.gmo  fr_FR.mo  fr_FR.po  pt_PT.gmo  pt_PT.mo  pt_PT.po  ru.po  ru_RU.gmo  ru_RU.mo  ru_RU.po
rpmbuild/: searchmonkey-0.8.2-0.spec  searchmonkey-0.8.3-0.spec
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  lgpl.h  main.c  misc.c  misc.h  regexwizard.c  savestate.c  savestate.h  search.c  search.h  searchmonkey  searchmonkey.pot  searchmonkey.ui  systemio.c  systemio.h
src/.deps/: callbacks.Po  interface.Po  main.Po  misc.Po  regexwizard.Po  savestate.Po  search.Po  support.Po  systemio.Po
